Enhanced calendar avoiding jump better css fit

--- a/styles/_calendar.scss
+++ b/styles/_calendar.scss
@@ -66,22 +66,22 @@
 
 // Hover border styling fix
 .rdrDayStartPreview.rdrDayEndPreview {
-	top: 4px;
-	bottom: 4px;
-	left: 1px;
-	right: 1px;
+	top: 5px;
+	bottom: 5px;
+	left: 2px;
+	right: 2px;
 }
 .rdrDayStartPreview:not(.rdrDayEndPreview) {
-	top: 4px;
-	bottom: 4px;
-	left: 1px;
+	top: 5px;
+	bottom: 5px;
+	left: 2px;
 }
 .rdrDayInPreview {
-	top: 4px;
-	bottom: 4px;
+	top: 5px;
+	bottom: 5px;
 }
 .rdrDayEndPreview:not(.rdrDayStartPreview) {
-	top: 4px;
-	bottom: 4px;
-	right: 1px;
+	top: 5px;
+	bottom: 5px;
+	right: 2px;
 }
